--- a/client/src/components/pages/Home.css
+++ b/client/src/components/pages/Home.css
@@ -1,3 +1,6 @@
+html {
+  height:100%;
+}
 body {
   height: 100%;
   width: 100%;
@@ -5,16 +8,22 @@ body {
   display: block;
 }
 
+.Navcontainer {
+  margin: 0px;
+  max-width: 100%;
+}
+
 body::after {
   content: "";
-  background: url("https://d2v9y0dukr6mq2.cloudfront.net/video/thumbnail/1-nzoRO/javascript-code-on-dark-editor-background-shot-close-up-while-scrolling-the-page-and-randomly-changing-focus-point_hpgulg8gx__F0000.png");
-  opacity: 0.;
+  background: url("https://d2v9y0dukr6mq2.cloudfront.net/video/thumbnail/1-nzoRO/javascript-code-on-dark-editor-background-shot-close-up-while-scrolling-the-page-and-randomly-changing-focus-point_hpgulg8gx__F0000.png") center no-repeat;
+  background-size: cover;
+  opacity: 0.85;
   top: 0;
   left: 0;
   bottom: 0;
   right: 0;
   position: absolute;
-  z-index: -1;  
+  z-index: -1;
 }
 
 .header {
