--- a/client/src/components/pages/Home.css
+++ b/client/src/components/pages/Home.css
@@ -16,7 +16,7 @@ body {
 
 body::after {
   content: "";
-  background: url("https://d2v9y0dukr6mq2.cloudfront.net/video/thumbnail/1-nzoRO/javascript-code-on-dark-editor-background-shot-close-up-while-scrolling-the-page-and-randomly-changing-focus-point_hpgulg8gx__F0000.png") center no-repeat;
+  background: linear-gradient( rgba(0, 0, 0, 2.0), rgba(0, 0, 0, 0.5) ), url("https://d2v9y0dukr6mq2.cloudfront.net/video/thumbnail/1-nzoRO/javascript-code-on-dark-editor-background-shot-close-up-while-scrolling-the-page-and-randomly-changing-focus-point_hpgulg8gx__F0000.png") center no-repeat;
   background-size: cover;
   opacity: 0.85;
   top: 0;
