--- a/client/src/components/Header.css
+++ b/client/src/components/Header.css
@@ -17,7 +17,7 @@
   opacity: 1;
   -webkit-text-stroke: 1.5px ;
   text-shadow: .3px .3px ;
-  transition: 0.2s ease-in;
+  transition: 0.3s ease-in;
 }
 
 h1 {
@@ -33,8 +33,8 @@ h1 {
 .navbar {
   height: 75px;
   width: 100%;
-  background-color: rgba(25, 25, 25, 0.75);
-  border-bottom: 1px solid black;
+  background-color: rgba(25, 25, 25, 0.5);
+  border-bottom: 0.5px solid rgb(7, 7, 7);
 
 }
 
