--- a/client/src/components/pages/Search.css
+++ b/client/src/components/pages/Search.css
@@ -1,9 +1,21 @@
+html {
+  height: 100%;
+}
+
+body {
+  min-height: 100%;
+  width: 100%;
+  position: relative;
+  display: block;
+  color: white
+}
+
 .currentPage {
   font-family: 'consolata', monospace;
   color: white;
 }
 
 .snippet-result {
-  margin-bottom: 10px;
+  padding: 20px 10px;
 }
 
