--- a/client/public/lib/codemirror.css
+++ b/client/public/lib/codemirror.css
@@ -90,7 +90,9 @@
 }
 
 /* Can style cursor different in overwrite (non-insert) mode */
-.CodeMirror-overwrite .CodeMirror-cursor {}
+.CodeMirror-overwrite .CodeMirror-cursor {
+  caret-color: red;
+}
 
 .cm-tab { display: inline-block; text-decoration: inherit; }
 
