--- a/client/src/components/pages/Home.css
+++ b/client/src/components/pages/Home.css
@@ -1,5 +1,5 @@
 html {
-  height: 100%;
+  height: 100vh;
 }
 
 body {
@@ -16,14 +16,17 @@ body {
 
 body::after {
   content: "";
-  background: linear-gradient(rgba(0,0,0,0.75),rgba(0, 0, 0, 0.75)), url("https://pace.oregonstate.edu/sites/default/files/styles/course_banner_large/public/images/course/cover/pace-oregon-state-html-css-coding-web-design.jpg") center no-repeat;
+  background: linear-gradient(rgba(0,0,0,0.85),rgba(0, 0, 0, 0.85)), url("https://pace.oregonstate.edu/sites/default/files/styles/course_banner_large/public/images/course/cover/pace-oregon-state-html-css-coding-web-design.jpg") center no-repeat;
   background-size: cover;
+  height: 100%;
+  min-height: 600px;
   top: 0;
   left: 0;
   bottom: 0;
   right: 0;
   position: absolute;
   z-index: -1;
+  overflow: hidden;
 }
 
 .header {
@@ -32,45 +35,70 @@ body::after {
 }
 
 #modal {
-  margin: auto;
-  width: 50%;
-  border: 3px solid red;
+  margin: 0 auto;
+  width: 10%;
+  border: 3px solid black;
   padding: 10px;
-  height: auto;
+  height: auto; 
+  left: 50%;
+  margin-left: -25%;
+  overflow: hidden;
+}
+
+.disableHorizontalScroll {
+  overflow-x:hidden;
 }
 
 #modalSignUp {
   margin: auto;
   width: 50%;
-  border: 3px solid red;
   padding: 10px;
+  border: 3px solid black;
   height: auto;
 }
 
 
 input{
-  width: 100%;
+  width: 75%;
   margin-bottom: 10px;
 }
 
 #submit {
-  width: 100%;
+  margin: auto;
+  width: 25%;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  cursor: pointer;
+  border: .5px;
+  
 }
 
 #closeModal{
   float: right;
+  border: 1px solid black;
+  border-radius: 10%;
+  cursor: pointer;
+
 }
 
 #createLink{
   width: auto;
 }
+
+.col-md-7 {
+  margin: auto
+}
+
 .jumbotron {
-  
   background: linear-gradient( rgb(36, 36, 36), rgb(36, 36, 36) );
   border-left: .5px solid cyan;
   border-bottom: .5px solid cyan;
   border-top: 25px solid whitesmoke;
   border-right: 17px solid whitesmoke;
+}
+
+h1 {
+  margin: 10px;
 }
 .developer {
   color: rgb(241, 164, 63)
