--- a/client/src/components/pages/Home.css
+++ b/client/src/components/pages/Home.css
@@ -10,6 +10,10 @@ body {
   color: white
 }
 
+.container {
+  max-width:100%;
+}
+
 .Navcontainer {
   margin: 0px;
   max-width: 100%;
@@ -35,32 +39,67 @@ body::after {
 
 #modal {
   margin: auto;
-  width: 50%;
-  border: 3px solid red;
-  padding: 10px;
-  height: auto;
+  width: 40%;
+  border: 3px solid white;
+  padding: 7px;
+  background-color: black;
+  border-radius: 3%;  
+  left: 50%;
+  margin-left: -25%;
+  position: relative;
+  text-align: center
 }
 
 #modalSignUp {
   margin: auto;
-  width: 50%;
-  border: 3px solid red;
-  padding: 10px;
+  width: 40%;
+  border: 3px solid white;
+  padding: 7px;
   height: auto;
+  background-color: black;
+  border-radius: 3%;
+  left: 50%;
+  margin-left: -25%;
+  position: relative;
+  text-align: center;
 }
 
-
-input{
-  width: 100%;
-  margin-bottom: 10px;
+#closeModalSignUp {
+  float: right;
+  color: red;
+  background-color: black;
+  text-shadow: none;
 }
 
-#submit {
-  width: 100%;
+.success-button {
+  width: 125px;
+  border-radius: 3%;
 }
 
 #closeModal{
   float: right;
+  color: red;
+  background-color: black;
+  text-shadow: none;
+}
+
+h1 {
+  margin-bottom: 5px;
+  color: whitesmoke;
+  padding-top: none
+}
+
+input{
+  width: 50%;
+  margin-bottom: 10px;
+}
+
+#submit {
+  width: 25%;
+  margin-top: 3px;
+  margin-bottom: 5px;
+  cursor: pointer;
+  border-radius: 5%;
 }
 
 #createLink{
