--- a/client/src/components/pages/Home.css
+++ b/client/src/components/pages/Home.css
@@ -39,27 +39,32 @@ body::after {
 
 #modal {
   margin: auto;
+  top: 50%;
   width: 40%;
+  height: 225px;
   border: 3px solid white;
   padding: 7px;
+  margin-top: -100px;
   background-color: black;
   border-radius: 3%;  
   left: 50%;
-  margin-left: -25%;
+  margin-left: -20%;
   position: relative;
   text-align: center
 }
 
 #modalSignUp {
   margin: auto;
+  top: 50%;
   width: 40%;
   border: 3px solid white;
   padding: 7px;
-  height: auto;
+  height: 225px;
   background-color: black;
   border-radius: 3%;
   left: 50%;
-  margin-left: -25%;
+  margin-left: -20%;
+  margin-top: -100px;
   position: relative;
   text-align: center;
 }
@@ -74,6 +79,7 @@ body::after {
 .success-button {
   width: 125px;
   border-radius: 3%;
+  margin-top: 15px;
 }
 
 #closeModal{
