--- a/client/src/components/pages/Home.css
+++ b/client/src/components/pages/Home.css
@@ -41,7 +41,7 @@ body::after {
   margin: auto;
   top: 50%;
   width: 40%;
-  height: 225px;
+  height: 250px;
   border: 3px solid white;
   padding: 7px;
   margin-top: -100px;
@@ -59,7 +59,7 @@ body::after {
   width: 40%;
   border: 3px solid white;
   padding: 7px;
-  height: 225px;
+  height: 250px;
   background-color: black;
   border-radius: 3%;
   left: 50%;
@@ -98,6 +98,7 @@ h1 {
 input{
   width: 50%;
   margin-bottom: 10px;
+  margin-top: 15px;
 }
 
 #submit {
