--- a/client/src/components/Footer.css
+++ b/client/src/components/Footer.css
@@ -3,6 +3,7 @@
     width: 100%;
     position: absolute; 
     bottom: 0;
+    left:0;
     background-color: rgba(25, 25, 25, 0.9);
   border-top: 0.5px solid rgb(7, 7, 7);
   z-index: 10;
