--- a/client/src/components/pages/New.css
+++ b/client/src/components/pages/New.css
@@ -4,7 +4,7 @@
 }
 
 .snippet-result {
-  border: 1px solid white;
+  border: 1px solid cyan;
   background-color: black;
   border-radius: 3px;
   opacity: 0.9;
