--- a/client/src/components/Header.css
+++ b/client/src/components/Header.css
@@ -117,6 +117,13 @@ h1 {
   padding-left: 3px;
   margin: auto;
   cursor: pointer;
+  font-size: 20px;
+  font-family: "consolata", monospace;
+
+}
+
+.userNameText {
+  max-width: 100px;
 }
 
 container {
@@ -158,7 +165,7 @@ container {
   margin: auto;
   top: 50%;
   width: 40%;
-  height: 225px;
+  height: 240px;
   border: 3px solid white;
   padding: 7px;
   margin-top: -100px;
